--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve --mode dev",
+    "build:test": "vue-cli-service build --mode test",
+    "build:prod": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "amfe-flexible": "^2.2.1",
     "core-js": "^2.6.5",
     "node-sass": "^4.12.0",
@@ -23,9 +25,12 @@
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
     "babel-eslint": "^10.0.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "happypack": "^5.0.1",
+    "terser-webpack-plugin": "^1.3.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
