--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
 NODE_ENV = 'development'
 VUE_APP_CURRENTMODE = 'dev'
-VUE_APP_BASEURL = 'localhost:8080'
+VUE_APP_BASEURL = 'http://localhost:8080'
