--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve --mode dev",
     "build:test": "vue-cli-service build --mode test",
     "build:prod": "vue-cli-service build --mode prod",
+    "build:dll": "webpack --config webpack.dll.config.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "amfe-flexible": "^2.2.1",
     "core-js": "^2.6.5",
     "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
     "postcss-pxtorem": "^4.0.1",
     "px2rem-loader": "^0.1.9",
     "sass-loader": "^7.1.0",
@@ -27,11 +29,15 @@
     "babel-eslint": "^10.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
+    "css-loader": "^3.0.0",
     "eslint": "^5.16.0",
+    "@vue/eslint-config-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.0.0",
     "happypack": "^5.0.1",
+    "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.35.3"
   },
   "eslintConfig": {
     "root": true,
@@ -40,7 +46,7 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "@vue/standard"
     ],
     "rules": {},
     "parserOptions": {
