--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "add-asset-html-webpack-plugin": "^3.1.3",
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
