--- a/package.json
+++ b/package.json
@@ -7,18 +7,16 @@
     "build:test": "vue-cli-service build --mode test",
     "build:prod": "vue-cli-service build --mode prod",
     "build:dll": "webpack --config webpack.dll.config.js",
+    "start": "webpack",
+    "server": "webpack-dev-server --open",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "add-asset-html-webpack-plugin": "^3.1.3",
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "postcss-pxtorem": "^4.0.1",
-    "px2rem-loader": "^0.1.9",
-    "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
@@ -27,16 +25,23 @@
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "babel-eslint": "^10.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "eslint": "^5.16.0",
-    "@vue/eslint-config-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.0.0",
-    "happypack": "^5.0.1",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "px2rem-loader": "^0.1.9",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
+    "thread-loader": "^2.1.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.35.3"
   },
