--- a/package.json
+++ b/package.json
@@ -61,13 +61,7 @@
   },
   "postcss": {
     "plugins": {
-      "autoprefixer": {},
-      "postcss-pxtorem": {
-        "rootValue": 75,
-        "propList": [
-          "*"
-        ]
-      }
+      "autoprefixer": {}
     }
   },
   "browserslist": [
